--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://pngimg.com/d/letter_k_PNG17.png" />
+    <link rel="icon" href="https://seeklogo.com/images/K/k-letter-logo-361F296ABD-seeklogo.com.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
